<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="Saved" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/scan_qr" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/title_wallet" />

</menu>
