<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".supportandhelp.SupportActivity"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Help And Support"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#08195e"
            android:fontFamily="@font/racingsans"
            android:layout_margin="20dp" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="14dp"
            android:padding="20dp"
            app:cardCornerRadius="40dp"
            android:layout_height="120dp">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailtext"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

            <Button
                android:id="@+id/emailsupport"
                android:layout_width="230dp"
                android:layout_height="29dp"
                android:text="support@lfyd.in"
                android:textAlignment="center"

                android:background="@drawable/roundnew"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center" />


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="20dp"
            android:layout_margin="24dp"
            app:cardCornerRadius="40dp">
            <TextView
                android:id="@+id/textView4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/care"


                />
            <Button
                android:id="@+id/phonedial"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="+91 9031716589"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:background="@drawable/roundnew"
                android:textSize="20dp"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="14dp"
            android:padding="20dp"
            app:cardCornerRadius="40dp"
            android:layout_height="160dp">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/live_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_marginTop="10dp"
                />



            <Button
                android:id="@+id/button"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="Chat With Us Now"
                android:background="@drawable/roundnew"
                android:textColor="#fff"
                android:layout_marginTop="20dp"
                android:layout_gravity="center" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>