<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/infocard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"

            android:layout_margin="30dp"
            android:background="@drawable/button_border"
            app:cardCornerRadius="40dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:padding="14dp"
                tools:layout_editor_absoluteX="3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="Merchant Information"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/editinfo"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_mode_edit_black_24dp"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/textname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:text="@string/name"
                    android:textColor="#000" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/wallet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"

        android:layout_margin="30dp"
        android:background="@drawable/button_border"
        app:cardCornerRadius="40dp"
        >





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="14dp"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/addmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/ic_wallet"
            android:tooltipText="Add Money" />

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_business_and_finance" />

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:paddingEnd="2dp"
                android:paddingRight="1dp"
                android:text="@string/wallet_cash"
                android:textColor="#000"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/wallet_cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:text="- -"
                android:textColor="#000"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:id="@+id/wallet_coin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"

        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="70dp"

        android:background="@drawable/button_border"
        app:cardCornerRadius="40dp"
        >





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="12dp"
            tools:layout_editor_absoluteX="3dp">

<!--            <ImageView-->
<!--                android:id="@+id/addmoney"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="right"-->
<!--                android:src="@drawable/ic_wallet"-->
<!--                android:tooltipText="Add Money" />-->

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_coin" />

            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:paddingEnd="2dp"
                    android:paddingRight="1dp"
                    android:text="@string/wallet_coin"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/wallet_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:text="- -"
                    android:textColor="#000"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>
 </ScrollView>
</LinearLayout>